--- a/src/components/MainNavigation/MainNavigation.module.css
+++ b/src/components/MainNavigation/MainNavigation.module.css
@@ -36,19 +36,39 @@
   color: var(--color-dark-gray-);
   display: inline-block;
   transition: all 0.4s;
+  position: relative;
 }
 
-.list a:hover {
+/* .list a:hover {
   color: var(--color-primary-dark-3);
+} */
+
+.list a::before {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-primary-dark-1);
+
+  transform: scaleX(0);
+  transform-origin: left;
+
+  transition: all 0.3s;
+}
+
+.list a:hover::before {
+  transform: scaleX(100%);
+  transform-origin: left;
 }
 
 .list a.active {
   background-color: var(--color-primary-dark-1);
   border-radius: 4px;
-
-  /* width: max-content; */
-  /* margin: 0; */
-  /* padding: 0; */
 }
 
 .text {
