--- a/src/components/Catalogo/PerritosList/FilterPerritos.module.css
+++ b/src/components/Catalogo/PerritosList/FilterPerritos.module.css
@@ -121,3 +121,8 @@
     margin: 2.4rem 2.4rem 2.4rem 0;
   }
 }
+
+.size-items input {
+  accent-color: var(--color-secondary-light-4);
+  color: white;
+}
