--- a/src/components/Catalogo/PerritosList/FilterPerritos.module.css
+++ b/src/components/Catalogo/PerritosList/FilterPerritos.module.css
@@ -49,7 +49,6 @@
 }
 
 .size-items input {
-  color: aquamarine;
   margin-left: 2.4rem;
   cursor: pointer;
   color: var(--color-secondary-light-6);
@@ -78,6 +77,10 @@
   border: 2px solid var(--color-gray-3);
   border-radius: 9px;
   text-align: center;
+  transition: all 0.3s ease-out;
+}
+.form select:hover {
+  background-color: var(--color-secondary-light-5);
 }
 
 .form select option {
@@ -123,6 +126,6 @@
 }
 
 .size-items input {
-  accent-color: var(--color-secondary-light-4);
+  accent-color: var(--color-secondary-light-6);
   color: white;
 }
