--- a/src/components/Helpers/Loading/IsLoading.module.css
+++ b/src/components/Helpers/Loading/IsLoading.module.css
@@ -1,17 +1,21 @@
 .background {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.2);
   height: 100vh;
   width: 100vw;
+  position: relative;
 }
 
-.loading {
-  position: fixed;
+.loading-icon-container {
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.loading-icon {
+  animation: rotating 1s infinite ease;
   font-size: 9.8rem;
   color: white;
-  animation: rotating 1s infinite;
 }
 
 @keyframes rotating {
