--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -13,12 +13,33 @@
 }
 
 .tel {
+  display: flex;
+  align-items: center;
   text-decoration: none;
   color: var(--color-primary-dark-2);
   display: flex;
   text-align: center;
   margin: 1.2rem 0;
   gap: 1.2rem;
+  position: relative;
+}
+
+.tel::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  transform: scaleX(0);
+  background-color: var(--color-primary-dark-2);
+  transition: transform 0.4s ease-out;
+  transform-origin: left;
+}
+
+.tel:hover::after {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
 .tel p {
@@ -37,6 +58,7 @@
   font-size: 3.2rem;
   border-left: 2px solid var(--color-secondary-dark-1);
   padding-left: 2.4rem;
+  position: relative;
 }
 
 .contact {
@@ -49,14 +71,20 @@
   align-items: center;
   gap: 1.2rem;
 }
+
 .link {
   cursor: pointer;
   transition: all 0.3s;
 }
 
+.link:hover {
+  color: var(--color-primary-dark-2);
+}
+
 .facebook {
   color: #3b5998;
 }
+
 .instagram {
   color: #e1306c;
 }
@@ -93,6 +121,7 @@
   text-decoration: none;
   color: inherit;
   gap: 1.2rem;
+  transition: all 0.3s;
 }
 
 .align-social-media p {
